static/css/style.css
/* ... */
#hour-holder{
  padding-right: 0 !important;
}

.timers{
  width: auto;
}

/* The parent wrapper for both the map and the form */
.wrapper {
  position: relative;
  height:100vh;
  margin: 0;
  padding: 0;
  width: 100vw;
  }

.overlay {
  background-color: rgba(33,37,41,0.9) !important;
  display: none;
  position: absolute;
  height:100vh;
  width: 100vw;
  margin: 0;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  padding: 0;
  z-index: 98;
  }

  .switch_note {
  background-color: rgba(33,37,41,0.9) !important;
  display: none;
  position: absolute;
  height:100vh;
  margin: 0;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  padding: 0;
  z-index: 98;
}


/* Positioning the form over the map and on the right of the screen. Parameters are pretty self explanatory */
#form {
  display: none;
  position: fixed;
  background-color: rgba(33,37,41,0.9) !important;
  margin-top: 0px;
  top: 0px;
  right: 0px;
  z-index: 99;
  height: 100vh;
  width: max-content !important;
  z-index: 99;
  border-radius: 5px;
  background-color: #FFF;
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  align-content: center;
  justify-content: center;
}


/* The class which is defined for displaying lines. Only display by jquery */
#lineholder{
  display: None;
}

/* The class which is defined for travel time display on the form. Only display by jquery */
#journeyholder{
  display: None;
}

/* Home 1 displays the routes after the user clicks get my travel time on the home tab */
#home1{
  color: white;
  display: none;
  max-width: 350px;
}

#timetable{
  max-width: 400px;
}
.col-centered{
  float: none;
  margin: 0 auto;
}

/* Customizing the navigation link */
a.nav-link.active{
  background-color: #DFDFDF !important;
}

a.nav-link{
  color: white;
}

#noSource{
  display: none;
}

#noDestination{
  display: none;
}

#sourceFirst{
  display: none;
}

/* Modifying tex-danger class */
.text-danger{
  color: #f44336 !important;
}

/* Set relative padding for the input boxes */
.inputRow{
  padding: 1rem;
  float: none;
}
#toggle-button{
  display: none;
}
@media screen and (min-width: 650px){
  #myTabContet{
    min-width: 400px;
  }
  #form{
    left: auto;
  }
}


/* CSS For the form when the device is opened in mobile */
@media screen and (max-width: 650px){ /* When the device screen widht decreases below 650 px */
    .mobile-form { /* Use this class */
      background-color: rgba(33,37,41,0.8) !important;
      border-radius: 10px !important;
      position: absolute !important; /* Make the position of the form */
      top: 50% !important;
      /* left: 50% !important;  */
      right: 50% !important;
      transform: translate(-50%, -50%); 
      height: auto !important;
      margin: 10px !important;
      width: inherit !important;
    }
    .mobile-overlay{
      position: absolute !important; /* Make the position of the form */
      top: 50% !important;
      left:0% !important; /* Since we need the form to hover over the map we will shift the form 50% from left */
      right: 0% !important;
      height: auto !important;
      width: inherit !important;
      transform: translate(0%, 0%) !important;
      z-index: 500;
    }
    .home1{
      width: inherit !important;
    }
    .mobile-col-centered{
      float: none;
      margin: 0 auto;
    }
    .mp-5{
      padding: 0px 8px 8px 8px !important;
    }
    .mmt-5{
      margin-top: 5px;
    }
    #brand-img{
      display: none;
    }
    #myTab{
      display: none;
    }
    .tab-pane{
      padding: 0px !important;
    }
    #undo{
      margin-top: 10px;
    }
    /* .form-main{
      width: -webkit-max-content !important;
      width: -moz-max-content !important;
      width: max-content !important;
    } */
    #toggle-button{
      display: block !important;
    }
    .navbar{
      float: left;
    }
    li.nav-item{
    padding: 0.5px !important;
    }
    .pac-card {
    /* margin: 10px 10px 0 0; */
    border-radius: 2px 0 0 2px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    outline: none;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
    background-color: #fff;
    font-family: Roboto;
  }

  #pac-container {
    padding-bottom: 12px;
    margin-right: 12px;
  }

  .pac-controls {
    display: inline-block;
    /* padding: 5px 11px; */
  }

  .pac-controls label {
    font-size: 13px;
    font-weight: 300;
  }

  #pac-input {
    background-color: #fff;
    font-size: 15px;
    font-weight: 300;
    margin-left: 12px;
    padding: 0 11px 0 13px;
    text-overflow: ellipsis;
    width: 280px !important;
  }

  #pac-input:focus {
    border-color: #4d90fe;
  }
  .mobile-markerwindow{
    display: none;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 200px;
    z-index: 50;
    background-color: rgba(33,37,41,0.9) !important;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  }
  .close{
    color: white;
    font-size: 1.6em;
  }
}

.errorreport{
  color: white;
  position: absolute !important; /* Make the position of the form fixed */
  top: 50% !important;
  left: 50%; /* Since we need the form to hover over the map we will shift the form 50% from left */
  right: 50% !important;
  height: auto;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  transform: translate(-50%, -50%); /* Same reasons from above [To position the form] */
  z-index:99;
}



.switch_note_content {
  color: white;
  position: absolute !important; /* Make the position of the form fixed */
  top: 50% !important;
  left: 50%; /* Since we need the form to hover over the map we will shift the form 50% from left */
  right: 50% !important;
  height: auto;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  transform: translate(-50%, -50%); /* Same reasons from above [To position the form] */
  z-index:99;
}
/* ... */

